Switch to Yabai

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,5 +1,9 @@
-# Casks
 tap "homebrew/cask"
+tap "zi0p4tch0/taps"
+tap "koekeishiya/formulae"
+tap "homebrew/services"
+
+# Casks
 cask "calibre"
 cask "secretive"
 cask "vscodium"
@@ -13,10 +17,12 @@ cask "1password"
 cask "plex"
 cask "plexamp"
 cask "parsec"
-cask "brave-browser"
-cask "iterm2"
+cask "firefox"
+cask "alacritty"
 
 # Tools
+brew  "yabai"
+brew "skhd"
 brew "fasd"
 brew "youtube-dl"
 brew "wget"
@@ -30,11 +36,14 @@ brew "tmux"
 brew "cmus"
 brew "tty-clock"
 brew "ical-buddy"
+brew "fzf"
+brew "neofetch"
+brew "imagemagick"
+brew "cbonsai"
 
 # Mac App Store
 brew "mas"
 mas "Slack", id: 803453959
-mas "Magnet", id: 441258766
 mas "The Unarchiver", id: 425424353 
 mas "Microsoft Remote Desktop", id: 1295203466
 mas "Amphetamine", id: 937984704
